# SQL

./: .git-config.json  .gitignore  GITHUB_UPLOAD_GUIDE.md  INSTALL.md  LICENSE  Makefile  MySQL判断题.md  MySQL填空题.md  MySQL复习.md  MySQL查询设计题.md  MySQL简答题.md  MySQL试卷一-答案.md  MySQL试卷一.md  MySQL试卷三-答案.md  MySQL试卷三.md  MySQL试卷二-答案.md  MySQL试卷四-答案.md  MySQL试卷四.md  MySQL选择题.md  Mysql试卷二.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TECHNICAL_NOTES.md  create_sample_db.py  install.sh  pyproject.toml  requirements-full.txt  requirements.txt  run.py  sample_database.db  setup.py  simple_sql_manager.py  一.md  第01章_数据库概述.md  补考题型及复习要点.md
config/: database.example.yml
docs/: user_guide.md
examples/: sample_queries.sql
src/: __init__.py  main.py
src/core/: app.py
src/database/: connection_manager.py  query_executor.py  simple_query_executor.py
src/ui/: __init__.py  connection_dialog.py  main_window.py  query_editor.py  result_viewer.py
src/utils/: config.py  logger.py
tests/: test_main.py
